--- a/src/pages/product/[slug].astro
+++ b/src/pages/product/[slug].astro
@@ -1,5 +1,4 @@
 ---
-// Use the new ContentLayout
 import { type CollectionEntry, getCollection } from 'astro:content';
 import ContentLayout from '../../layouts/ContentLayout.astro';
 
@@ -15,15 +14,14 @@ type Props = {
 }
 
 const { entry } = Astro.props;
-const { Content } = await entry.render();
+const { Content, headings } = await entry.render();
 ---
-{/* Use ContentLayout and pass frontmatter props */}
 <ContentLayout
   title={entry.data.title}
   publishDate={entry.data.publishDate}
   tags={entry.data.tags}
   imageUrl={entry.data.imageUrl}
+  headings={headings}
 >
-  {/* The Markdown content is passed as the default slot */}
   <Content />
 </ContentLayout>
