feat: 新しいPDFファイルを追加し、コンテンツレイアウトを改善
- src/assets/watabegg.pdfを新規追加
- src/components/TableOfContents.astroのトグルオーバーレイにテキストサイズを追加
- src/content/blog/qiita.mdを新規追加
- src/layouts/ContentLayout.astroのコンテンツラッパーに最大幅を設定し、プローズの最大幅制約を削除

--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -54,7 +54,7 @@ const depthClasses: { [key: number]: string } = {
 
     <div
       id="toc-overlay"
-      class="lg:hidden fixed inset-0 bg-black/50 z-[1000] opacity-0 invisible transition-opacity duration-300 ease-in-out"
+      class="lg:hidden fixed inset-0 bg-black/50 z-[1000] opacity-0 invisible transition-opacity duration-300 ease-in-out text-md"
       aria-hidden="true"
     ></div>
 
